syntax = "proto3";

package hostlookup;

service Hostlookup {
    rpc Hello (Empty) returns (HelloReply) {}
    rpc Lookup (LookupRequest) returns (LookupReply) {}
    rpc LookupMany(stream LookupRequest) returns (stream LookupReply) {}

    rpc LookupManyBatch(stream LookupRequestBatch) returns (stream LookupReplyBatch) {}
}

message Empty {
}


message HelloReply {
    string message = 1;
}

message LookupRequest {
    string address = 1;
}

message LookupReply {
    string address = 1;
    string host = 2;
}

message LookupRequestBatch {
    repeated LookupRequest requests = 1;
}

message LookupReplyBatch {
    repeated LookupReply replies = 1;
}
